Updates to final report

--- a/Reports/Final/literature.bib
+++ b/Reports/Final/literature.bib
@@ -108,4 +108,20 @@ author = {ReactiveX},
 howpublished = {\url{http://reactivex.io/documentation/observable.html}},
 note = {Accessed: 28 March 2016},
 }
+@Misc{gimp,
+OPTauthor = {The GIMP Team},
+OPTtitle = {About GIMP},
+OPThowpublished = {\url{https://www.gimp.org/about/}},
+OPTyear = {2015},
+OPTnote = {Accessed: 30 March 2016},
+}
+@Misc{platform,
+OPTauthor = {Oracle},
+OPTtitle = {Platform},
+OPThowpublished = {\url{https://docs.oracle.com/javase/8/javafx/api/javafx/application/Platform.html}},
+OPTyear = {2015},
+OPTnote = {Accessed: 29 March 2016},
+}
+
+
 
