--- a/Reports/Final/team_londonsw.tex
+++ b/Reports/Final/team_londonsw.tex
@@ -236,7 +236,7 @@ Secondly, and more importantly, this implementation did not work with JavaFX thr
 	Exception in thread "Timer-1" java.lang.IllegalStateException:
 	Not on FX application thread; currentThread = Timer-1
 \end{lstlisting}
-This was a major cause for concern, because the goal was to have a fully functioning graphical user interface and not simply displaying vehicles in the console! At first, this was solved by a call to the JavaFX application platform, called Platform. It contains a method "runLater(Runnable r)" that takes any sort of runnable task. This did make the animation work from the Ticker thread, but it was not ideal because it simply schedules the task for some "unspecified time in the future". Finally, a minor issue was that the Ticker had an instance, but all methods were static, so it made us think if having an instance was necessary at all. This is when we decided that the Ticker class must be re-worked in some other way, hence our second, and current, implementation.
+This was a major cause for concern, because the goal was to have a fully functioning graphical user interface and not simply displaying vehicles in the console! At first, this was solved by a call to the JavaFX application platform, called Platform. It contains a method "runLater(Runnable r)" that takes any sort of runnable task \cite{platform}. This did make the animation work from the Ticker thread, but it was not ideal because it simply schedules the task for some "unspecified time in the future". Finally, a minor issue was that the Ticker had an instance, but all methods were static, so it made us think if having an instance was necessary at all. This is when we decided that the Ticker class must be re-worked in some other way, hence our second, and current, implementation.
 \subsection{Second Implementation (Current)}
 \subsubsection{Initial Stages}
 \paragraph{}
@@ -381,7 +381,7 @@ Otherwise, system would delete $(oldValue - newValue)$ cars randomly from the ve
 
 \subsection{Map Graphics}
 \paragraph{}
-The whole Map grid layout consists on a GridPane which is a flexible grid of rows and columns that holds in each row and column a specific pane. Each cell is a StackPane, which can either be grass (empty square), a Road, or an Intersection. All drawings are of our own authorship because we have used the tool GIMP, an open source graphic editor. The size of each stack pane is dynamic and we are able to change it by changing a resize factor, which is an important attribute used in many of our drawings. 
+The whole Map grid layout consists on a GridPane which is a flexible grid of rows and columns that holds in each row and column a specific pane. Each cell is a StackPane, which can either be grass (empty square), a Road, or an Intersection. All drawings are of our own authorship because we have used the tool GIMP, an open source graphic editor \cite{gimp}. The size of each stack pane is dynamic and we are able to change it by changing a resize factor, which is an important attribute used in many of our drawings. 
 \subsection{Decorators}
 \paragraph{}
 Our implementation is using the Decorator Pattern to extend the functionalities of each component so that the objects can be drawn by wrapping the original object and invoking a draw method for each component. There are 5 main wrappers MapGridGUIDecorator, IntersectionDecorator, RoadGUIDecorator, TrafficLightDecorator and VehicleGUIDecorator.
@@ -412,9 +412,9 @@ Each vehicle will have exactly one VehicleGUIDecorator associated with it. We ha
 Our vehicle movement evolved over the course of the project, with many improvements made along the way. 
 \subsubsection{First Implementation}
 \paragraph{}
-After the map's grid was able to be drawn dynamically, the vehicle now had to move on top of the lanes. It was challenging at first because the obvious way of having the vehicle move between grid cells is not possible. The first step towards our solution was having a rectangle representing the vehicle fill the whole grid cell, regardless of whether it is moving vertically or horizontally. The location of where the rectangle should go was determined by a formula, which took its original placement in the map. The coordinate x- and y-positions of the vehicle are multiplied by the image dimension and the resize factor. The actual movement of the vehicle was dependent on the map direction it is coming from and the map direction it is going to. So if a vehicle is moving east, then north, that means it is turning left and a left turn animation was required. A JavaFX TranslateTransition is used to move the vehicle.
+After the map's grid was able to be drawn dynamically, the vehicle now had to move on top of the lanes. It was challenging at first because the obvious way of having the vehicle move between grid cells is not possible. The first step towards our solution was having a rectangle representing the vehicle fill the whole grid cell, regardless of whether it is moving vertically or horizontally. The location of where the rectangle should go was determined by a formula, which took its original placement in the map. The coordinate x- and y-positions of the vehicle are multiplied by the image dimension and the resize factor. The actual movement of the vehicle is dependent on the map direction it is coming from and the map direction it is going to. So if a vehicle is moving east, then north, that means it is turning left and a left turn animation is required. A JavaFX TranslateTransition is used to move the vehicle.
 \paragraph{}
-However, turning the vehicle was quite complex. In the first implementation, a vehicle would simply shift into its new location, so a different edge of the vehicle would now be moving forwards. That did not lend itself to a realistic simulation. Additionaly, because of all the different kinds of cases of movement, like east to north, west to south, et cetera, had a lot of duplicated code with only a few values changed in each. Furthermore, the nature of the animation was shifting it by some x and y values relative to where the vehicle currently is. This made the animation imprecise and over time, vehicles would shift out of their lanes and start moving on grass or on top of other improper lanes. As a consequence, this kind of animation did not work with any ticker speed. If the ticker was made faster, the animation would become more imprecise, with vehicles not reaching the cells they should have in time. This approach worked well in a very limited amount of cases and needed to be reworked to work with a variety of ticker speeds and many vehicles. This brought us to our second implementation of vehicle movement.
+However, turning the vehicle was quite complex. In the first implementation, a vehicle would simply shift into its new location, so a different edge of the vehicle would now be moving forwards. That did not lend itself to a realistic simulation. Additionaly, because of the different kinds of cases of movement, like east to north, west to south, et cetera, we had a lot of duplicated code with only a few values changed in each case. Furthermore, the nature of the animation was shifting it by some x and y values relative to where the vehicle currently is. This made the animation imprecise and over time, vehicles would shift out of their lanes and start moving on grass or on top of other lanes. As a consequence, this kind of animation only worked with a ticker speed of 1000ms. If the ticker was made faster, the animation would become more imprecise, with vehicles not reaching the cells they should have in time. This approach worked well in a very limited amount of cases and needed to be reworked to work with a variety of ticker speeds and many vehicles. This brought us to our second implementation of vehicle movement.
 
 \subsubsection{Second Implementation (Current)}
 \paragraph{}
@@ -427,10 +427,10 @@ Because of all the issues with the first vehicle movement, namely vehicles shift
 \item Set the movement translation to an exact location
 \item Move and rotate the vehicle
 \end{enumerate}
-There are helper methods to calculate some of the steps. The method "directionToTranslation(MapDirection d)" takes a MapDirection and translates it into a coordinate representing a movement in that direction. For example, passing in a parameter of EAST returns a Coordinate with the value of (1,0), which represents moving once in the positive x-direction and staying constant in the y-direction. The method "getRotationFromDirectionChange(...)" takes the direction the vehicle is moving from and to as parameters and returns the angle which the vehicle must turn by. Most importantly, the method "coordinateToPixels(Coordinate c, MapDirection d)" takes a location in the map and a direction as parameters and returns the exact location to where the vehicle must move to. It is also used to determine the initial location of the vehicle. The MapDirection parameter makes sure that the vehicle gets drawn in the correct lane.
+There are helper methods to calculate some of the steps. The method "directionToTranslation(MapDirection d)" takes a MapDirection and translates it into a coordinate representing a movement in that direction. For example, passing in a parameter of EAST returns a Coordinate with the value of (1,0). The method "getRotationFromDirectionChange(...)" takes the direction the vehicle is moving from and to as parameters and returns the angle which the vehicle must turn by. Most importantly, the method "coordinateToPixels(Coordinate c, MapDirection d)" takes a location in the map and a direction as parameters and returns the exact location to where the vehicle must move to. It is also used to determine the initial location of the vehicle. The MapDirection parameter makes sure that the vehicle gets drawn in the correct lane.
 
 \paragraph{}
-There are many advantages to this second implementation. First, there was a drastic reduction in code duplication. The process was converted to a set of simple steps, like a recipe, which works in any situation. In addition, because of each coordinate having a distinct location, the vehicle knows exactly where to move to. This makes it work flawlessly with any ticker speed. Finally, the vehicle does not shift out of its proper lane over time. 
+There are many advantages to this second implementation. First, there was a drastic reduction in code duplication. The process was converted to a set of simple steps which works in any situation. In addition, because of each coordinate having a distinct location, the vehicle knows exactly where go. This makes it work flawlessly with any ticker speed. Finally, the vehicle does not shift out of its lanes over time. 
 
 \subsection{Simulation Statistics}
 We have a couple of traffic management policies. These are:
@@ -440,7 +440,7 @@ We have a couple of traffic management policies. These are:
 \item Increasing or decreasing the number of vehicles
 \end{itemize}
 \paragraph{}
-By doing these three things, the effect of them can be seen in the "Vehicle Time Spent Standing" statistic. This is a percentage that gets calculated using all the vehicles in the map. Each vehicle has two variables associated with it for the calculation of this statistic: timeSpentStanding and timesTicked. Each time the vehicle was unable to move, its timeSpentStanding increases. A vehicle is unable to move if it is at a red light or if there was a vehicle in the slot in front of it. The increment happens VehicleController class when the "move" result is zero, i.e., it could not move forwards.
+By doing these three things, the effect of them can be seen in the "Vehicle Time Spent Standing" statistic. This is a percentage that gets calculated using all the vehicles in the map. Each vehicle has two variables associated with it for the calculation of this statistic: timeSpentStanding and timesTicked. Each time the vehicle was unable to move, its timeSpentStanding increases. A vehicle is unable to move if it is at a red light or if there was a vehicle in the slot in front of it. The increment happens in the  VehicleController class when the "move" result is zero, i.e., it could not move forwards.
 \begin{lstlisting}
 	if(move == 0) {
 		Vehicle thisVehicle = vehicleGUIDecorator.getVehicle();
@@ -448,9 +448,9 @@ By doing these three things, the effect of them can be seen in the "Vehicle Time
 	}
 \end{lstlisting}
 \paragraph{}
-For the percentage calculation, there is a local subscriber to the ticker in the SimulationScreen class. It is used for doing anything operation when the ticker ticks, like increasing the "Times Ticked" label and doing this statistic calculation. Each time the ticker ticks, the method "getPercentageStanding()" is called and the output is set to the label.
+For the percentage calculation, there is a local subscriber to the ticker in the SimulationScreen class. It is used for doing any operation when the ticker ticks, like increasing the "Times Ticked" label and calculating this statistic. Each time the ticker ticks, the method "getPercentageStanding()" is called and the output is set to the label.
 \paragraph{}
-In this function, the VehicleController gets queried for two values: the total time spent standing for all vehicles and the total times ticked for all vehicles. Each method gives the sum of all timeSpentStanding and timesTicked, respectively. 
+In this method, the VehicleController gets queried for two values: the total time spent standing for all vehicles and the total times ticked for all vehicles. Each method gives the sum of all timeSpentStanding and timesTicked, respectively. 
 \begin{lstlisting}
 	int timeSpentStanding = VehicleController.getTotalTimeSpentStanding();
 	int totalTimesTicked = VehicleController.getTotalTimesTicked();
@@ -466,8 +466,8 @@ This statistic can tell us about the amount of congestion on the roads and how e
 
 \subsubsection{Interesting Trends}
 \paragraph{}
-Many interesting reactions to this statistic can be observed by manipulating the three controls available: increasing and decreasing the number of vehicles, disabling traffic lights, and setting the traffic light duration.
-\begin{itemize}
+Many interesting trends to this statistic can be observed by manipulating the three controls available:
+\begin{itemize}\itemsep1pt \parskip0pt \parsep0pt
 \item The more vehicles there are, the higher the percentage of vehicle time spent standing is.
 \item When holding the simulation conditions stable (e.g. keeping a constant number of vehicles, not changing traffic light duration), the percentage of vehicle time spent standing stabilizes over time and does not differ by about one percentage.
 \item Increasing the duration of traffic lights increases the percentage of vehicles standing, and decreasing the duration of traffic lights decreases the percentage of vehicle time spent standing.
@@ -479,30 +479,28 @@ Many interesting reactions to this statistic can be observed by manipulating the
 \section{Map Maker Mode}
 \subsection{Map Making Basics}
 \paragraph{}
-To make our system more flexible to different kinds of maps, we allow the user to build their own maps to run the simulation on if they do not like any of the pre-made maps. When starting the system, if the user chooses to "Make a new Map", they are prompted to choose a width and height. To prevent maps that are too small or large to view, the width and height are limited to the range of 5 to 30. An empty map of the width and height that they chose is generated. The user can then proceed to put map components into the grid by clicking on the desired component and clicking to where on the map they want the component to be. Map components include: intersections, roads that run vertically (North-South), roads that run horizontally (East-West), and grass (an empty, or null, square). Roads are always added with a lane going in each direction. If a component was placed in a square by accident, the "grass" component can be added to empty that map grid square. The user keeps doing this until the map they build is complete. At that point, the user would press the "Save Map" button to save the map to disk. If the user does not like their map, the "Reset Map" button removes all components from the map. If they decide to not build a map anymore, the "Go Back" button brings them back to the mode selection screen. 
+To make our system more flexible to different kinds of maps, we allow the user to build their own maps to run the simulation on if they do not like any of the pre-made maps. When starting the system, if the user chooses to "Make a new Map", they are prompted to choose a width and height. To prevent maps that are too small or large to view, the width and height are limited to the range of 5 to 30. An empty map of the width and height that they chose is generated. The user can then proceed to put map components into the grid by clicking on the desired component and clicking to where on the map they want the component to be. Map components include: intersections, roads that run vertically (North-South), roads that run horizontally (East-West), and grass (an empty/null, square). Roads are always added with a lane going in each direction. If a component was placed in a square by accident, the "grass" component can be added to empty that square. When the user finishes, they can press the "Save Map" button to save the map to disk. If the user does not like their map, the "Reset Map" button removes all components from the map. If they decide to not build a map anymore, the "Go Back" button brings them back to the mode selection screen. 
 
 \subsection{Implementation}
 \paragraph{The Empty Map}
-The empty map is represented by the Map class, which contains the MapGrid of no components. To allow clicking on the map, we traverse through the map, visiting each cell, and adding an on-click listener to each cell. Since the Map is represented by a JavaFX GridPane, getting the node to add the on-click listener to at the specified location was not trivial. We included a function called "getNodeFromIndex" that takes the x- and y-coordinates and the GridPane as parameters. It gets the node by looking throught all the children of that GridPane cell for every GridPane cell, and if that Node's location equals the location that we requested, that Node from the GridPane is returned. Now we know when the user clicks on the map to place a map component.
+The empty map is represented by the Map class, which contains the MapGrid of no components. To allow clicking on the map, we traverse through the map, visiting each cell, and adding an on-click listener to each cell. Since the Map is represented by a JavaFX GridPane, getting the node to add the on-click listener to at the specified location was not trivial. We included a function called "getNodeFromIndex" that takes the x- and y-coordinates and the GridPane as parameters. It gets the node by looking throught all the children of each GridPane cell, and if that Node's location equals the location that we requested, that Node from the GridPane is returned. Now we know when the user clicks on the map to place a map component.
 \paragraph{Placement of Map Components}
 When the user selects a component from the right of the screen and clicks on a location in the map, an instance of that component is actually created in the map. For instance, when placing an intersection in the map, an Intersection object gets created and placed in that space. It is set with no roads attached and no traffic lights. When placing a bit of road, either North-South or East-West, an instance of the Road class is created every time. The Road instance's start and end coordinate locations are the same, so a road of length 1 is created. Two lanes are added, with each going in opposite directions.
 \paragraph{Keeping Focus}
 At first, building maps was a very annoying task. The user would have to click on the map component on the right, then click on the empty grid square, then go back to click on the map component again, followed by an empty grid square, and so on. This was solved by tracking of what on the screen gets focus and what held the focus previously. Focus means what was last clicked or selected  by the user, that is, the mouse cursor was "focused" on a specific element on the screen. The focus is represented by a Java enum, with entries like ROADNS (for a road that travels vertically) and INTERSECTION. 
 \paragraph{}
-When this mode starts up, the current focus is set to nothing, and the previous is null. The values are stored in the MapMakerController. As an example, if the user first clicks on the Intersection component image, that image gains focus. A blue glow surrounds the image to represent that it has focus. If the user then clicks on an empty map grid square, that map grid square gains focus and the previous focused gets set to Intersection. The map grid checks was was previously focused. It will see that Intersection ws previously focused, and place the component in the clicked map grid square. However, to make it easier on the user, focus is then placed back on the Intersection component image so they can keep clicking intersections into the map. The same applies for all other component images. 
+When this mode starts up, the current focus is set to nothing, and the previous is null. The values are stored in the MapMakerController. As an example, if the user first clicks on the Intersection component image, that image gains focus. A blue glow surrounds the image to represent focus. If the user then clicks on an empty map grid square, that map grid square gains focus and the previous focused gets set to Intersection. The map grid checks was was previously focused. It will see that Intersection was previously focused, and place the component in the clicked map grid square. However, to make it easier on the user, focus is then placed back on the Intersection component image so they can keep clicking intersections into the map. The same applies for all other component images. 
 \paragraph{Saving the Map}
-When the user decides to save the map, they first get prompted for a file name. The file name cannot be empty, and this is enforced by disabling the "OK" button in the Save dialog while the name text field is empty. When the user hits the "OK" button, the saving process begins. Because of the way the map components were placed into the map, all the roads are separate and disconnected and all intersections are not connected to any roads. In other words, if there is a road of length 5 moving vertically, there are actually 5 separate roads moving vertically. We need to "glue" together all the bits of roads, connect those roads to the relevant intersections, and add all traffic lights. 
+When the user decides to save the map, they first get prompted for a file name. The file name cannot be empty, and this is enforced by disabling the "OK" button in the Save dialog while the textfield is empty. When the user hits the "OK" button, the saving process begins. Because of the way the map components were placed into the map, all the roads are separate and disconnected and all intersections are not connected to any roads. In other words, if there is a road of length 5 moving vertically, there are actually 5 separate roads moving vertically. We need to "glue" together all the bits of roads, connect those roads to the relevant intersections, and add all traffic lights. 
 \paragraph{}
-There is a method in the MapMakerScreen class called "buildAndSaveMap(Map m)" that takes the map "m" that the user built. Using that map's width and height, the method creates a new empty map that will serve as the "glued together" and final verison of the user built map. We traverse the broken map, and when we discover a component, we process it. Discovering an intersection is the simplest case. We remove the intersection from the old map and place a new intersection into the old map at the same location. For bits of Road instances, it is trickier. If we discover a bit of road that is moving horizontally (east-west), we then have a while loop moving down the map row to see how long the road is. This way we determine the start location of this road (the original found piece) and the end location of this road (the last bit of road discovered moving horizontally that was not null). We create a new road, add 2 lanes, remove all the bits of road from the old map (so they do not get added again to the fixed map), and add the new road to the new map. A similar process is done for roads moving vertically. Each time a new stretch of road bits is discovered in the old map, this process is followed to "glue" all road sections together.
+The method in the MapMakerScreen class called "buildAndSaveMap(Map m)" takes the map "m" that the user built. Using that map's width and height, a new empty map is created that will serve as the "glued together" and final verison of the user built map. We traverse the broken map, and when we discover a component, we process it. Discovering an intersection is the simplest case. We remove the intersection from the old map and place a new intersection into the old map at the same location. For bits of Road instances, it is trickier. If we discover a bit of road that is moving horizontally (east-west), we then have a while loop moving down the map row to see how long the road is. This way we determine the start location of this road (the original found piece) and the end location of this road (the last bit of road that was not null). We create a new road, add 2 lanes, remove all the bits of road from the old map (so they do not get added to the fixed map twice), and add the new road to the new map. A similar process is done for roads moving vertically. Each time a new stretch of road bits is discovered in the old map, this process is followed to "glue" all road sections together.
 \paragraph{}
-Now that we added all Roads and Intersections to the new map, we must connect the "edges" and "nodes" of our map, i.e. our roads and intersections. There is a method called "assignRoadsToIntersections(Map m)" that takes the fixed map that we just built as a parameter. We retrieve the list of all intersections from the map, and determine the surrounding coordinates for that intersection. If there is a road component in any of the coordinates, the intersection gets assigned that road. For example, if there is a Road component at the location one coordinate north of the intersection, that road gets assigned as the north road of that intersection. This is done for all intersections. Now that all roads are glued and all intersections have been assigned roads, the map can now finally be saved to disk.
-\paragraph{}
-We are using Java serialization to save the map. First, we check if the maps directory exists. The maps directory is set to the current working location from where the system was invoked. If it does not exist, it is created. Using the file name that the user provided in the Save dialog, we save it into the maps directory. Once this is complete, the user gets taken to the previous screen in the system, the choose mode screen. Now they can choose to open their newly built map or build a new one.
+Now that we added all Roads and Intersections to the new map, we must connect the "edges" and "nodes" of our map, i.e. our roads and intersections. The method "assignRoadsToIntersections(Map m)" takes the fixed map that we just built as a parameter. We retrieve the list of all intersections from the map and determine the surrounding coordinates for that intersection. If there is a road component in any of the coordinates, the intersection gets assigned that road. For example, if there is a Road component north of the intersection, that road gets assigned as the north road of that intersection. This is done for all intersections. Now that all roads are glued and all intersections have been assigned roads, the map can now finally be saved to disk using serialization.
 \paragraph{Map Validation and Robustness}
-When saving the map, there is no map validation. We do not check whether all roads connect to some intersection and that no intersections are floating alone with no roads. Therefore, the user is able to build any meaningless or broken maps. However, this is completely fine. The simulation is robust against these kinds of map designs by having the vehicles behave in appropriate ways. For instance, if there is a road without an intersection at the end of it, the vehicle simply leaves the simulation. If there is a road connected to an intersection, but no other roads to go to, the vehicle simply stays in place once it reaches the intersection because it has nowhere else to go. So overall, no matter how poorly built the map is, the vehicles will act accordingly and there will be no system crashes.
+When saving the map, there is no map validation. We do not check whether all roads connect to some intersection and that no intersections are floating alone with no roads. Therefore, the user is able to build any meaningless map. However, this is fine. The simulation is robust against these kinds of map designs by having the vehicles behave in appropriate ways. For instance, if there is a road without an intersection at the end of it, the vehicle simply leaves the simulation. If there is a road connected to an intersection, but no other roads to go to, the vehicle simply stays in place once it reaches the intersection because it has nowhere else to go. So overall, no matter how poorly built the map is, the vehicles will act accordingly and there will be no system crashes.
 
 \subsection{Evaluation}
-Although the map building process was optimized by keeping focus and quick map component placement, there are a few areas where the process could have been improved. Some sort of click-and-drag functionality would make it easier to place a lot of components in big maps. Some of the non-GUI functionality, like saving the map or helper methods like getting a Node at some coordinate, could have been moved to the controller to keep GUI and logical methods separate. When saving the map, we should have probably checked if each newly discovered adjacent bit of road is moving in the same direction as the first piece of discovered road. Some map validation would be nice to have, regardless of how robust the system is. Finally, a dialog saying where the map was saved to would be useful so the user would know exactly where to look when trying to load their map for the simulation screen.
+Although the map building process was optimized by keeping focus and quick map component placement, there are a few areas where the process could have been improved. Some sort of click-and-drag functionality would make it easier to place a lot of components in big maps. Some of the non-GUI functionality helper methods could have been moved to the controller to keep GUI and logical methods separate. When saving the map, we should have probably checked if each newly discovered adjacent road is moving in the same direction as the first piece of discovered road. Some map validation would be nice to have, regardless of how robust the system is. Finally, a dialog saying where the map was saved to would be useful so the user would know exactly where to look when trying to load their map for the simulation screen.
 
 \part{Teamwork}
 \section{Communication}
@@ -514,17 +512,17 @@ We use WhatsApp for general communication, like coordinating meeting times. We u
 We have scheduled group meetings twice a week, mostly on Monday and Friday. We discussed task progress and assigned new tasks normally on Monday. On Friday, there would be a long-duration meeting. we would talk about the project in detail and members would code together.
 \section{Agile development with Mingle}
 \paragraph{}
-Because of the nature of the project, continuous learning and adaptation to the emergent state of the project are unavoidable. We use Mingle for project management which is based on Agile software development principles. It is designed to integrate with a team's current workflow. We used Mingle's Planner feature to define objectives for each team members, track a plan's progress, and receive alerts when a plan changes. Mingle helps our team communicate and collaborate easily and effectively solve problems by having more efficient conversations with team members.
+Because of the nature of the project, continuous learning and adaptation to the emergent state of the project are unavoidable. We use Mingle for project management which is based on Agile software development principles. It is designed to integrate with a team's workflow. We used Mingle's Planner feature to define objectives for each team member, track a plan's progress, and receive alerts when a plan changes. Mingle helps our team communicate intentions, collaborate easily, and effectively solve problems by having more efficient conversations with team members.
 \paragraph{}
-At the task level, Mingle allows us to assign teammates to a specific action, so everyone can see who is working on what. At each end of our group meeting we will assign tasks to group members by adding a new story at Mingle planner including a specific task description, an estimate duration, status (new, in progress, complete), a task priority (must, should could), the owner of the task. 
+At the task level, Mingle allows us to assign teammates to a specific action, so everyone can see who is working on what. At the end of our group meetings, we will assign tasks to group members by adding a new story at Mingle planner including a specific task description, an estimate duration, status (new, in progress, complete), a task priority (must, should could), the owner of the task. 
 \paragraph{}
-At the project level, we use Mingle to nudge teams to have a conversation if an upcoming deadline has not been met. Before each group meeting we will talked about task completion status to have a better grasp about how is the progress going.
+At the project level, we use Mingle to start a conversation if an upcoming deadline has not been met. We often talked about a task's status to have a better grasp about how is the progress going.
 \paragraph{}
-At the program level, Mingle sends us alerts so that everyone can follow up. we also exported the task file and uploaded to Github to make it available and more convenient  for everyone to check their tasks at any time.
+At the program level, Mingle sends us alerts so that everyone can follow up. We also exported the task file and uploaded to Github to make it available and more convenient for everyone to check their tasks at any time.
  
 \subsection{Github}
 \paragraph{}
-IntelliJ is our main platform for coding. We use Github as our main source-code repository. We have a master branch and four personal branches. Everyone is free to experiment and commit changes. Anything in the master branch is always deployable. Branch won't be merged until it's ready to be reviewed by master. Once we have done our tasks we may make a commit so that others can follow to understand after pulling. We would add an associated commit message, which is a description explaining why a particular change was made to make it clear for others what we have done. Master branch would close a merge and we could also rolled  back changes if a bug found since each commit is considered a separate unit of change.
+IntelliJ is our main platform for coding. We use Github as our main source-code repository. We have a master branch and four personal branches. Everyone is free to experiment and commit changes. Anything in the master branch is always deployable. Branches aren't merged until the change was reviewed. Once we have done our tasks, we commit and add an associated commit message, which is a description explaining why a particular change was made. The master branch would close a merge request and sometimes roll back changes if a bug was found, since each commit is considered a separate unit of change. Our Slack chat was configured to include a GitHub bot to tell us when changes were made.
 
 \part{General Project Evaluation}
 \section{Things that went well}
@@ -533,9 +531,9 @@ We had clear goals for each development stage, i.e. what must/should/could be ac
 \paragraph{}
 From the perspective of software development, we adhered to the MVC architecture. We have clear hierarchical model structures, e.g., a map contains roads and intersections, traffic light and lane are owned by intersection and road respectively.
 \paragraph{}
-We made the system an user-friendly application. Users can monitor and control the simulation process by going into simulation mode. The map maker mode allows users to design maps with any dimensions or map components. A simulation log is available after each simulation for users to analyze the whole simulation process. 
+We made the system a user-friendly application. Users can monitor and control the simulation process by going into simulation mode. The map maker mode allows users to design maps with any dimensions or map components. A simulation log is available after each simulation for users to analyze the whole simulation process. 
 \paragraph{}
-In general, we worked well as a team, with each member focusing on a different aspect of the system. There were no major conflicts and everyone understood the importance of good, hard work for this project.
+In general, we worked well as a team, with each member focusing on a roughly different aspect of the system. There were no major conflicts and everyone understood the importance of good, hard work for this project.
 
 \subsection{Things that did not go well and what we did}
 We had many difficulties along the way, but we always managed to pull through and resolve them. The ticker went through several iterations itself, with improvements being made each time. The animation started off basic, which also got improved several times over the course of the project. Bugs like traffic lights not working in loaded maps got fixed promptly. And finally, the resize factor used to display maps poorly, but now does a good job for all map sizes.
@@ -547,7 +545,20 @@ It is impossible to implement all ideas we had because of short term. In the fut
 \part{Peer Assessment}
 \paragraph{}
 We have decided to distribute the points as follows:
-
+\begin{center}
+\begin{tabular}{ l | c }
+  Name & Points \\ \hline
+  Violetta & 20.0 \\
+  Santiago & 20.0 \\
+  Rawan & 20.0 \\
+  Yakubu & 20.0 \\ 
+  Jia & 20.0\\ \hline \hline
+  Total & 100.0\\
+  \hline
+\end{tabular}
+\end{center}
+\paragraph{}
+We distributed the points evenly because we believe that each member contributed a lot to the project. Each person has something that they implemented and was their idea, and many hours were spent by all on this project.
 \part{Appendix}
 \section{Git Log}
 \input{gitlog}
